/*
 * traO Judge API
 *
 * traO Judge API (front ↔ back)
 *
 * The version of the OpenAPI document: 0.1.0
 *
 * Generated by: https://openapi-generator.tech
 */

use crate::models;
use serde::{Deserialize, Serialize};

/// JudgeStatus : ジャッジの状態  * `AC` - 正解 * `WA` - 不正解 * `CE` - コンパイルエラー * `IE` - 内部エラー * `MLE` - メモリ制限超過 * `RE` - 実行時エラー * `TLE` - 実行時間超過 * `WJ` - ジャッジ待ち
/// ジャッジの状態  * `AC` - 正解 * `WA` - 不正解 * `CE` - コンパイルエラー * `IE` - 内部エラー * `MLE` - メモリ制限超過 * `RE` - 実行時エラー * `TLE` - 実行時間超過 * `WJ` - ジャッジ待ち
#[derive(Clone, Copy, Debug, Eq, PartialEq, Ord, PartialOrd, Hash, Serialize, Deserialize)]
pub enum JudgeStatus {
    #[serde(rename = "AC")]
    Ac,
    #[serde(rename = "WA")]
    Wa,
    #[serde(rename = "CE")]
    Ce,
    #[serde(rename = "IE")]
    Ie,
    #[serde(rename = "MLE")]
    Mle,
    #[serde(rename = "RE")]
    Re,
    #[serde(rename = "TLE")]
    Tle,
    #[serde(rename = "WJ")]
    Wj,
}

impl std::fmt::Display for JudgeStatus {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        match self {
            Self::Ac => write!(f, "AC"),
            Self::Wa => write!(f, "WA"),
            Self::Ce => write!(f, "CE"),
            Self::Ie => write!(f, "IE"),
            Self::Mle => write!(f, "MLE"),
            Self::Re => write!(f, "RE"),
            Self::Tle => write!(f, "TLE"),
            Self::Wj => write!(f, "WJ"),
        }
    }
}

impl Default for JudgeStatus {
    fn default() -> JudgeStatus {
        Self::Ac
    }
}
